src/test/ui/range/issue-54505-no-std.stderr
error: `#[panic_handler]` function required, but not found

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:28:16
   |
LL |     take_range(0..1);
   |                ^^^^
   |                |
   |                expected reference, found struct `Range`
   |                help: consider borrowing here: `&(0..1)`
   |
   = note: expected type `&_`
              found type `Range<{integer}>`
            reachable by `use core::ops::Range;`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:33:16
   |
LL |     take_range(1..);
   |                ^^^
   |                |
   |                expected reference, found struct `RangeFrom`
   |                help: consider borrowing here: `&(1..)`
   |
   = note: expected type `&_`
              found type `RangeFrom<{integer}>`
            reachable by `use core::ops::RangeFrom;`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:38:16
   |
LL |     take_range(..);
   |                ^^
   |                |
   |                expected reference, found struct `RangeFull`
   |                help: consider borrowing here: `&(..)`
   |
   = note: expected type `&_`
              found type `RangeFull`
            reachable by `use core::ops::RangeFull;`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:43:16
   |
LL |     take_range(0..=1);
   |                ^^^^^
   |                |
   |                expected reference, found struct `RangeInclusive`
   |                help: consider borrowing here: `&(0..=1)`
   |
   = note: expected type `&_`
              found type `RangeInclusive<{integer}>`
            reachable by `use core::ops::RangeInclusive;`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:48:16
   |
LL |     take_range(..5);
   |                ^^^
   |                |
   |                expected reference, found struct `RangeTo`
   |                help: consider borrowing here: `&(..5)`
   |
   = note: expected type `&_`
              found type `RangeTo<{integer}>`
            reachable by `use core::ops::RangeTo;`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:53:16
   |
LL |     take_range(..=42);
   |                ^^^^^
   |                |
   |                expected reference, found struct `RangeToInclusive`
   |                help: consider borrowing here: `&(..=42)`
   |
   = note: expected type `&_`
              found type `RangeToInclusive<{integer}>`
            reachable by `use core::ops::RangeToInclusive;`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
